<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="5sp"
    android:paddingLeft="5sp"
    android:paddingRight="5sp"
    android:paddingTop="5sp"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Device Status"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/device_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="text"
            android:textSize="15sp"
            android:textStyle="italic" />
    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enable Notification"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/aswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"/>
    </LinearLayout>-->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:weightSum="3">

        <TableRow
            android:layout_weight="1"
            android:paddingBottom="2sp">

            <LinearLayout
                android:id="@+id/first_pm_sensor_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_amber_400"
                android:orientation="vertical">

                <TextView
                    style="@style/SensorNameTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/first_pm_sensor_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/first_pm_sensor_value"
                        style="@style/SensorValueTextViewTheme"/>

                    <TextView
                        android:id="@+id/first_pm_sensor_unit"
                        style="@style/SensorUnitTextViewTheme" />

                </LinearLayout>

                <TextView
                    android:id="@+id/first_pm_sensor_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:paddingTop="5sp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_pm_sensor_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1"
                android:background="@color/md_amber_600"
                android:orientation="vertical">

                <TextView
                    style="@style/SensorNameTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/second_pm_sensor_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/second_pm_sensor_value"
                        style="@style/SensorValueTextViewTheme" />

                    <TextView
                        android:id="@+id/second_pm_sensor_unit"
                        style="@style/SensorUnitTextViewTheme" />

                </LinearLayout>

                <TextView
                    android:id="@+id/second_pm_sensor_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:paddingTop="5sp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/humidity_sensor_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_amber_400"
                android:orientation="vertical">

                <TextView
                    style="@style/SensorNameTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/humidity_sensor_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/humidity_sensor_value"
                        style="@style/SensorValueTextViewTheme"/>

                    <TextView
                        android:id="@+id/humidity_sensor_unit"
                        style="@style/SensorUnitTextViewTheme" />

                </LinearLayout>

                <TextView
                    android:id="@+id/humidity_sensor_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:paddingTop="5sp"
                    android:textAlignment="center" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:paddingBottom="2sp">

            <LinearLayout
                android:id="@+id/temperature_sensor_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_amber_600"
                android:orientation="vertical">

                <TextView
                    style="@style/SensorNameTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/temperature_sensor_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/temperature_sensor_value"
                        style="@style/SensorValueTextViewTheme" />

                    <TextView
                        android:id="@+id/temperature_sensor_unit"
                        style="@style/SensorUnitTextViewTheme" />

                </LinearLayout>

                <TextView
                    android:id="@+id/temperature_sensor_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:paddingTop="5sp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/co_sensor_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1"
                android:background="@color/md_amber_400"
                android:orientation="vertical">

                <TextView
                    style="@style/SensorNameTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/co_sensor_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/co_sensor_value"
                        style="@style/SensorValueTextViewTheme" />

                    <TextView
                        android:id="@+id/co_sensor_unit"
                        style="@style/SensorUnitTextViewTheme" />

                </LinearLayout>

                <TextView
                    android:id="@+id/co_sensor_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:paddingTop="5sp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/co2_sensor_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_amber_600"
                android:orientation="vertical">

                <TextView
                    style="@style/SensorNameTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/co2_sensor_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/co2_sensor_value"
                        style="@style/SensorValueTextViewTheme"/>

                    <TextView
                        android:id="@+id/co2_sensor_unit"
                        style="@style/SensorUnitTextViewTheme" />

                </LinearLayout>

                <TextView
                    android:id="@+id/co2_sensor_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:paddingTop="5sp"
                    android:textAlignment="center" />

            </LinearLayout>

        </TableRow>

        <TableRow android:layout_weight="1">

            <LinearLayout
                android:id="@+id/no2_sensor_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_amber_400"
                android:orientation="vertical">

                <TextView
                    style="@style/SensorNameTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/no2_sensor_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/no2_sensor_value"
                        style="@style/SensorValueTextViewTheme" />

                    <TextView
                        android:id="@+id/no2_sensor_unit"
                        style="@style/SensorUnitTextViewTheme" />

                </LinearLayout>

                <TextView
                    android:id="@+id/no2_sensor_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:paddingTop="5sp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/so2_sensor_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1"
                android:background="@color/md_amber_600"
                android:orientation="vertical">

                <TextView
                    style="@style/SensorNameTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/so2_sensor_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/so2_sensor_value"
                        style="@style/SensorValueTextViewTheme" />

                    <TextView
                        android:id="@+id/so2_sensor_unit"
                        style="@style/SensorUnitTextViewTheme" />

                </LinearLayout>

                <TextView
                    android:id="@+id/so2_sensor_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:paddingTop="5sp"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/o3_sensor_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_amber_400"
                android:orientation="vertical">

                <TextView
                    style="@style/SensorNameTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/o3_sensor_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/o3_sensor_value"
                        style="@style/SensorValueTextViewTheme" />

                    <TextView
                        android:id="@+id/o3_sensor_unit"
                        style="@style/SensorUnitTextViewTheme" />

                </LinearLayout>

                <TextView
                    android:id="@+id/o3_sensor_time"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:paddingTop="5sp"
                    android:textAlignment="center" />

            </LinearLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>
